# linkedin-jobs-critics

./: .gitignore  README.md  improvement-plan.md  linkedin_jobs.db  pyproject.toml
docs/plans/: 2026-07-07-001-feat-agent-loop-handoff-plan.md
src/critics/: __init__.py  agent.py  cli.py  config.py  graph.py  judge.py  report.py  search_agent.py  tools.py
tests/: test_agent.py  test_cli.py  test_config.py  test_graph.py  test_judge.py  test_report.py  test_tools.py
