[project]
name = "linkedin-jobs-critics"
version = "0.1.0"
description = "One-shot langchain critic that checks linkedin-jobs parse quality against job descriptions."
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3",
    "langchain-openai>=1.3",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
critics = "critics.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/critics"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
